--- a/package.json
+++ b/package.json
@@ -3,27 +3,30 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "DEBUG=express-sequelize node ./bin/www",
     "test": "npm run test-unit && npm run test-integration",
-    "test-unit": "mocha test/unit/*.test.js",
-    "test-integration": "mocha test/integration/*.test.js"
+    "test-unit": "cross-env NODE_ENV=test ./node_modules/.bin/mocha test/unit/*.test.js",
+    "test-integration": "cross-env NODE_ENV=test ./node_modules/.bin/mocha test/integration/*.test.js",
+    "migrations": "node_modules/.bin/sequelize db:migrate"
   },
   "dependencies": {
-    "body-parser": "~1.8.1",
-    "cookie-parser": "~1.3.3",
-    "debug": "~2.0.0",
-    "express": "~4.9.0",
-    "jade": "~1.6.0",
-    "morgan": "~1.3.0",
-    "sequelize": "^2.0.0-rc1",
-    "sequelize-cli": "^0.3.0",
-    "serve-favicon": "~2.1.3",
-    "sqlite3": "^3.0.1"
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "debug": "^3.1.0",
+    "express": "^4.16.2",
+    "morgan": "^1.7.0",
+    "pg": "^6.1.0",
+    "pug": "^2.0.0-rc.4",
+    "sequelize": "^3.23.6",
+    "sequelize-cli": "^3.1.0",
+    "serve-favicon": "~2.3.0",
+    "sqlite3": "^3.0.8"
   },
   "devDependencies": {
-    "bluebird": "^2.9.25",
+    "cross-env": "^3.1.3",
     "expect.js": "^0.3.1",
-    "mocha": "^2.2.4",
-    "supertest": "^0.15.0"
+    "mocha": "^3.0.2",
+    "supertest": "^2.0.0"
   }
 }
