--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
     "morgan": "^1.7.0",
     "pg": "^6.1.0",
     "pug": "^2.0.0-rc.4",
